# HuntAI

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  RUN.md  pyproject.toml  scope.yaml
docker/: docker-compose.yml  labs.yaml
docker/tools/: Dockerfile
eval/groundtruth/: lab-172.20.0.10.yaml
kb/methodology/: ports.md  recon.md  web.md
scripts/: native_run.py  smoke.py
src/huntai/: __init__.py  audit.py  cli.py  config.py  labs.py  schemas.py  scope.py
src/huntai/agents/: __init__.py  agentic.py  analysis.py  approval.py  copilot.py  llm_analyst.py  llm_planner.py  orchestrator.py  planner.py  prompts.py  recon.py  reporter.py  validation.py
src/huntai/analysis/: __init__.py  cve.py  cve_db.json  graph.py  intelligence.py  mitre.py
src/huntai/core/: __init__.py  factory.py  interactive.py  settings_store.py
src/huntai/engine/: __init__.py  compaction.py  dispatcher.py  runner.py
src/huntai/evalkit/: __init__.py  harness.py
src/huntai/kb/: __init__.py  cag.py  memory.py
src/huntai/llm/: __init__.py  client.py
src/huntai/obs/: __init__.py  trace.py
src/huntai/tui/: app.py  (+1 more)
tests/: test_agentic.py  test_analysis_intel.py  test_engine.py  test_eval_obs.py  test_interactive.py  test_kb.py  test_labs.py  test_llm_analyst.py  test_llm_planner.py  test_orchestrator.py  test_recon_agent.py  test_schemas.py  test_scope.py  test_settings.py  test_tools.py  test_web.py
tests/fixtures/: httpx.jsonl  naabu.jsonl  nmap.xml  nuclei.jsonl  subfinder.jsonl
web/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
(+10 files in other folders)
